fixed wordbox size issue on mobile view

--- a/public/style.css
+++ b/public/style.css
@@ -35,6 +35,7 @@ body {
 .wordBox {
   border-radius: 5px;
   margin: 10px;
+  height:auto;
 }
 .btn-large {
   background-color: #218220;
